# FARMER

./: .gitignore  AGENTS.md  PLANS.md  README copy.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  models.py
backend/app/core/: config.py  database.py  exceptions.py  permissions.py  rate_limit.py  regions.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 20260708_0001_users_farmer_profiles.py  20260710_0002_livestock_registry.py  20260711_0003_marketplace.py  20260713_0004_vet_profiles.py  20260713_0005_admin_moderation.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: models.py  repository.py  routes.py  schemas.py  service.py  vet_routes.py
backend/app/modules/animals/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/auth/: dependencies.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/farmers/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/health/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/marketplace/: __init__.py  models.py  repository.py  routes.py  (+2 more)
backend/app/scripts/: create_admin.py
backend/morocco_livestock_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  helpers.py  test_admin.py  test_animal_photos.py  test_animals.py  test_auth.py  test_farmer_dashboard.py  test_farmers.py  test_hardening.py  test_health.py  test_marketplace.py  test_vets.py  test_weights.py
(+160 files in other folders)
