[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morocco-livestock-backend"
version = "0.1.0"
description = "Phase 1 FastAPI backend for the Morocco Livestock Platform."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "Pillow>=10.4.0",
    "pwdlib[argon2]>=0.2.1",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
